<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/minimalist2"
    android:padding="20dp"
    tools:context=".Loginpage">


    <ImageView
        android:layout_width="388dp"
        android:layout_height="290dp"
        android:contentDescription="logoagain"
        android:src="@drawable/illustration_started"
        tools:ignore="MissingConstraints"
        android:alpha="0.7"
        tools:layout_editor_absoluteX="-21dp"
        tools:layout_editor_absoluteY="-30dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_2"
        style="@style/TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="570dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="460dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_3"
        style="@style/TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="630dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="518dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/log_email"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp"
        android:hint="@string/email_log"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="322dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_email"
            android:layout_width="match_parent"
            android:layout_height ="50dp"
            android:backgroundTint="@color/L100"
            android:background="@drawable/roundbtn"
            android:textColor="@color/TextColor"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/log_password"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:hint="@string/pass_log"
        app:layout_constraintTop_toBottomOf="@+id/log_email"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="4dp"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:backgroundTint="@color/L100"
            android:background="@drawable/roundbtn"
            android:textColor="@color/TextColor"
            tools:ignore="MissingConstraints" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="530dp"
        android:text="@string/forgot_pw"
        android:textAlignment="textEnd"
        android:textColor="@color/D800"
        android:textSize="15sp"
        android:textStyle="bold" />


</RelativeLayout>