<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:padding="20dp"
    tools:context=".ForgotPasswordActivity">


    <TextView
        android:id="@+id/reset_pw"
        style="@style/SubTitle"
        android:layout_width="403dp"
        android:layout_height="70dp"
        android:layout_marginTop="320dp"
        android:fontFamily="@font/comfortaabold"
        android:text="@string/reset_your_password"
        android:textAlignment="center"
        android:textColor="@color/D800"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="472dp" />

    <ImageView
        android:layout_width="430dp"
        android:layout_height="300dp"
        android:contentDescription="logo"
        android:src="@drawable/illustration_started"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-21dp"
        tools:layout_editor_absoluteY="-30dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/log_email"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="390dp"
        android:hint="@string/email_log"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/TextColor"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="322dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_email1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/TextColor"
            android:textColorLink="@color/white"
            android:backgroundTint="@color/L100"
            android:background="@drawable/roundbtn"
            android:textSize="15sp"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="550dp"
        android:text="@string/reset"
        android:backgroundTint="@color/LightGreen"
        android:background="@drawable/roundbtn"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="460dp" />

    <TextView
        android:id="@+id/tv_back_login"
        style="@style/SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/back_to_log_in"
        android:textAlignment="center"
        android:textSize="14sp" />

</RelativeLayout>