<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    android:textColor="@color/TextColor"
    android:padding="20dp"
    tools:context=".Signupactivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phonenum1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:hint="@string/type_your_phone_number"
        app:startIconDrawable="@drawable/ic_account"
        app:startIconTint="@color/TextColor"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="322dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:inputType="phone"
            android:backgroundTint="@color/L100"
            android:textColor="@color/TextColor"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="322dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/subtitle"
        style="@style/SubTitle"
        android:layout_width="403dp"
        android:layout_height="70dp"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/comfortaabold"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textColor="@color/D800"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="472dp" />


    <ImageView
        android:layout_width="291dp"
        android:layout_height="205dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="-5dp"
        android:contentDescription="logoalways"
        android:src="@drawable/illustration_started"
        android:textAlignment="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-21dp"
        tools:layout_editor_absoluteY="-30dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp"
        android:background="@color/A300"
        android:text="@string/signup"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="518dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:hint="@string/sign_name"
        app:startIconDrawable="@drawable/ic_account"
        app:startIconTint="@color/TextColor"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="322dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/L100"
            android:textColor="@color/TextColor"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sign_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:hint="@string/sign_email1"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/TextColor"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="322dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/L100"
            android:textColor="@color/TextColor"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/log_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:hint="@string/pass_log"
        app:startIconDrawable="@drawable/ic_circle_account"
        app:startIconTint="@color/TextColor"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:backgroundTint="@color/L100"
            android:textColor="@color/TextColor"
            tools:ignore="MissingConstraints" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/relog_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:hint="@string/confirm_password"
        app:startIconDrawable="@drawable/ic_circle_account"
        app:startIconTint="@color/TextColor"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_repass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/L100"
            android:textColor="@color/TextColor"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints" />

    </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>